# starweaver-platform

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  book.toml  docker-compose.yml
.github/workflows/: ci.yml  docs.yml  images.yml  live-provider-smoke.yml  pre-commit.yml
crates/starweaver-gateway/: Cargo.toml  Dockerfile
crates/starweaver-gateway/migrations/: 20260625000001_core_schema.sql  20260628000001_route_evidence_fields.sql  20260628000002_usage_event_trace_id.sql  20260628000003_model_target_pricing_sku.sql  20260628000004_maintenance_windows.sql  20260628000005_catalog_imports.sql
crates/starweaver-gateway/src/: action.rs  auth.rs  catalog.rs  config.rs  domain.rs  error.rs  fixtures.rs  hot_state.rs  lib.rs  main.rs  migrations.rs  policy.rs  redis_hot_state.rs  replay.rs  responses_websocket.rs  route.rs  routing.rs  runtime.rs  service.rs  storage.rs
crates/starweaver-platform/: Cargo.toml  Dockerfile
crates/starweaver-platform/migrations/: 20260627000001_core_schema.sql  20260627000002_oidc_login_attempts.sql  20260627000003_platform_secret_refs_and_oidc_auth_method.sql  20260627000004_platform_organization_invitations.sql  20260627000005_platform_audit_events.sql
crates/starweaver-platform/src/: action.rs  audit.rs  auth.rs  config.rs  identity.rs  invitation.rs  lib.rs  main.rs  membership.rs  migrations.rs  postgres.rs  resource.rs  role.rs  route.rs  secret.rs  service.rs  storage.rs  user.rs
crates/starweaver-platform/tests/: shared_auth_layering_contract.rs
docs/: SUMMARY.md  _headers  agent-platform.md  api-contracts.md  architecture.md  gateway.md  index.md  install.md  mermaid-init.js  nav.json  operations.md  testing.md
docs/openapi/: gateway.openapi.json  platform.openapi.json
release/: migration-checksums.txt
spec/: 01-platform-service.md  README.md
spec/gateway/: 00-requirements.md  01-llm-gateway.md  02-tenancy-access.md  03-provider-credential-catalog.md  04-routing-router.md  05-runtime-protocol.md  06-usage-cost-budget-notifications.md  07-admin-config-api.md  08-security-observability-operations.md  09-validation-and-rollout.md  10-authorization-api-keys.md  11-login-user-management.md  12-dashboards-observability-api.md  README.md
spec/gateway/memos/: 2026-06-24-framework-selection.md  2026-06-24-hot-state-cache.md  2026-06-24-implementation-plan.md  README.md
spec/gateway/ui/: 00-admin-console-spec.md  01-implementation-plan.md  02-backend-readiness-review.md  README.md
spec/gateway/ui/reviews/: 01-app-shell-and-navigation.md  02-overview-realtime-ops.md  03-usage-and-observability.md  04-model-catalog.md  05-routing-and-simulation.md  06-providers-and-credentials.md  07-access-and-identity.md  08-policy-and-cost-controls.md  09-evidence-and-audit.md  10-operations-and-delivery.md
spec/ops/: 01-release-and-deployment.md
spec/platform/: 01-agent-platform-service.md
spec/shared/: 01-service-suite-boundary.md  02-auth-authz-layering.md
xtask/: Cargo.toml
xtask/src/: main.rs
