[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
secrecy = "0.10"
serde_json = "1"
sha2 = "0.10"
starweaver-gateway = { path = "../crates/starweaver-gateway" }
starweaver-platform = { path = "../crates/starweaver-platform" }
