[package]
name = "starweaver-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LLM gateway service crate for Starweaver enterprise deployments"
readme.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
