[package]
name = "starweaver-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LLM gateway service crate for Starweaver enterprise deployments"
readme.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
argon2 = "0.5"
axum = { version = "0.8", features = ["json", "macros"] }
cedar-policy = "4.11.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
hmac = "0.12"
http = "1"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "chrono", "json"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower = "0.5"
url = "2"
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto", "use_pem"] }
tower = { version = "0.5", features = ["util"] }
