[package]
name = "starweaver-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent platform service crate for Starweaver enterprise deployments"
readme.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "chrono", "json"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
url = "2"

[dev-dependencies]
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto", "use_pem"] }
starweaver-gateway = { path = "../starweaver-gateway" }
temp-env = "0.3.6"
tower = { version = "0.5", features = ["util"] }
